<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_movie_poster"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/movies"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_vote_average"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintLeft_toRightOf="@+id/img_thumbnail"
            app:layout_constraintRight_toLeftOf="@+id/fab"
            app:layout_constraintTop_toTopOf="@+id/img_thumbnail"
            tools:text="Movie Title"
            android:padding="8dp"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/text_font_white"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:elevation="8dp"
            android:translationZ="2dp"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            app:backgroundTint="@color/disableLike"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_title"
            app:srcCompat="@drawable/ic_like" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_vote_average"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_overview"
            app:layout_constraintRight_toLeftOf="@+id/tv_movie_vote_average"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_vote_average">
            <RatingBar
                android:id="@+id/rb_movie_vote_average"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="10"
                android:stepSize="0.1"
                android:theme="@style/GoldenRatingBar"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="9dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_overview"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

        <TextView
            android:id="@+id/tv_trailer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_red_light"
            android:elevation="8dp"
            android:padding="8dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:text="@string/content_description_trailer"
            android:textColor="@color/text_font_white"
            android:textStyle="bold"
            android:translationZ="2dp"
            app:layout_constraintLeft_toLeftOf="@+id/img_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/content_description_review"
            tools:text="Reviews"
            android:padding="8dp"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/text_font_white"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:elevation="8dp"
            android:translationZ="2dp"
            android:textStyle="bold"
            android:layout_marginTop="-40dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_trailers"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_trailer"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/tv_trailer"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:text="Movie Overview"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            app:layout_constraintRight_toRightOf="@+id/fab"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title" />

        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_review_unavailable"
                android:visibility="gone"
                android:text="@string/review_unavailable"
                android:textStyle="italic"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_trailer_unavailable"
                android:visibility="gone"
                android:text="@string/trailer_unavailable"
                android:textStyle="italic"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>